k8s/base/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-app
  namespace: app
spec:
  selector:
    app: test-app
  ports:
    - name: http
      port: 80
      targetPort: 3000
  type: ClusterIP
