k8s/base/app/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-app-allow-all
  namespace: app
spec:
  podSelector:
    matchLabels:
      app: test-app
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - {}
  egress:
    - {}
